n/a - November 25, 2004
	* Added consolelog to contrib/sysconfig (DJ Lucas)
	* Added syslog-ng.conf to contrib/sysconfig (DJ Lucas)
	* Rewrite of line wraping in boot_mesg and various fixes
	  related to boot_mesg changes (DJ Lucas, Alexander Patrakov)

n/a - November 20, 2004
	* Modifed modules script to return to previous kernel message
	  level (DJ Lucas)

n/a - November 02, 2004
	* Added sysctl -p to mountkernfs (Matthew Burgess, DJ Lucas)

n/a - October 07, 2004
	* statusproc modified not to send data to bootlog (Nathan Coulson)
	* Fixed halt commands in checkfs and udev (James Robertson)

n/a - October 04, 2004
	* Fixes to commit on 2004/09/30 (James Robertson)
	* Revert a few changes until later (Nathan Coulson)
	* Added a warning about switching from a 8bit font
	  to a 9bit font (Alexander Patrakov)

n/a - September 30, 2004
	* Finished off boot_mesg() (James Robertson)
	* Standardized all scripts to same variable format and other
	  internal sh/bash function calls (James Robertson)
	* Fully implemented boot_mesg across all scripts in sysconfig
	  and init.d (James Robertson)

n/a - September 26, 2004
	* Added BOOTMESG_PREFIX variable, so users can optionally set a
	  prefix for boot messages (James Robertson)
	* Fixed localnet status, to use ip instead of ifconfig (Jim Gifford)
	* Added consolelog to contrib (DJ Lucas)
	* loadproc and killproc can have the -nomsg parameter to avoid
	  calling evaluate_retval or print_status (Jim Gifford)
	* boot_mesg no longer explicitly adds a \n onto end of lines
	* Added a function called boot_mesg_flush, which can
	  dump the BOOTMESG to the bootlog.  This helps avoid making
	  everything have to end in OK/WARN/FAIL (Nathan Coulson)

n/a - September 24, 2004
	* Removed /dev/udev.tdb test

n/a - September 23, 2004
	* Fixed boot_log so it output's $@'s contents, not @$
	* Added support for colors in boot_mesg (James Robertson)
	* Modified udev's error checking
	* Modified hotplug's error checking