@@ -37,29 +37,29 @@ install: create-dirs create-service-dir
 	install -m ${MODE} lfs/init.d/reboot       ${EXTDIR}/rc.d/init.d/
 	install -m ${MODE} lfs/init.d/sendsignals  ${EXTDIR}/rc.d/init.d/
 	install -m ${MODE} lfs/init.d/setclock     ${EXTDIR}/rc.d/init.d/
+	install -m ${MODE} lfs/init.d/syslog-ng	   ${EXTDIR}/rc.d/init.d
 	install -m ${MODE} lfs/init.d/swap         ${EXTDIR}/rc.d/init.d/
-	install -m ${MODE} lfs/init.d/sysklogd     ${EXTDIR}/rc.d/init.d/
 	install -m ${MODE} lfs/init.d/template     ${EXTDIR}/rc.d/init.d/
 	install -m ${MODE} lfs/init.d/udev         ${EXTDIR}/rc.d/init.d
-	ln -sf ../init.d/sysklogd    ${EXTDIR}/rc.d/rc0.d/K90sysklogd
 	ln -sf ../init.d/network     ${EXTDIR}/rc.d/rc0.d/K80network
+	ln -sf ../init.d/syslog-ng   ${EXTDIR}/rc.d/rc0.d/K90syslog-ng
 	ln -sf ../init.d/sendsignals ${EXTDIR}/rc.d/rc0.d/S60sendsignals
 	ln -sf ../init.d/mountfs     ${EXTDIR}/rc.d/rc0.d/S70mountfs
 	ln -sf ../init.d/swap        ${EXTDIR}/rc.d/rc0.d/S80swap
 	ln -sf ../init.d/localnet    ${EXTDIR}/rc.d/rc0.d/S90localnet
 	ln -sf ../init.d/halt        ${EXTDIR}/rc.d/rc0.d/S99halt
-	ln -sf ../init.d/sysklogd    ${EXTDIR}/rc.d/rc1.d/K90sysklogd
 	ln -sf ../init.d/network     ${EXTDIR}/rc.d/rc1.d/K80network
-	ln -sf ../init.d/sysklogd    ${EXTDIR}/rc.d/rc2.d/K90sysklogd
+	ln -sf ../init.d/syslog-ng   ${EXTDIR}/rc.d/rc1.d/K90syslog-ng
 	ln -sf ../init.d/network     ${EXTDIR}/rc.d/rc2.d/K80network
-	ln -sf ../init.d/sysklogd    ${EXTDIR}/rc.d/rc3.d/S10sysklogd
+	ln -sf ../init.d/syslog-ng   ${EXTDIR}/rc.d/rc2.d/K90syslog-ng
+	ln -sf ../init.d/syslog-ng   ${EXTDIR}/rc.d/rc3.d/S10syslog-ng
 	ln -sf ../init.d/network     ${EXTDIR}/rc.d/rc3.d/S20network
-	ln -sf ../init.d/sysklogd    ${EXTDIR}/rc.d/rc4.d/S10sysklogd
+	ln -sf ../init.d/syslog-ng   ${EXTDIR}/rc.d/rc4.d/S10syslog-ng
 	ln -sf ../init.d/network     ${EXTDIR}/rc.d/rc4.d/S20network
-	ln -sf ../init.d/sysklogd    ${EXTDIR}/rc.d/rc5.d/S10sysklogd
+	ln -sf ../init.d/syslog-ng   ${EXTDIR}/rc.d/rc5.d/S10syslog-ng
 	ln -sf ../init.d/network     ${EXTDIR}/rc.d/rc5.d/S20network
 	ln -sf ../init.d/network     ${EXTDIR}/rc.d/rc6.d/K80network
-	ln -sf ../init.d/sysklogd    ${EXTDIR}/rc.d/rc6.d/K90sysklogd
+	ln -sf ../init.d/syslog-ng   ${EXTDIR}/rc.d/rc6.d/K90syslog-ng
 	ln -sf ../init.d/sendsignals ${EXTDIR}/rc.d/rc6.d/S60sendsignals
 	ln -sf ../init.d/mountfs     ${EXTDIR}/rc.d/rc6.d/S70mountfs
 	ln -sf ../init.d/swap        ${EXTDIR}/rc.d/rc6.d/S80swap
@@ -75,20 +75,19 @@ install: create-dirs create-service-dir
 	ln -sf ../init.d/setclock    ${EXTDIR}/rc.d/rcsysinit.d/S60setclock
 	ln -sf ../init.d/console     ${EXTDIR}/rc.d/rcsysinit.d/S70console
 	ln -sf ../init.d/localnet    ${EXTDIR}/rc.d/rcsysinit.d/S80localnet
-	install --backup=numbered -m ${CONFMODE} lfs/sysconfig/console                                    ${EXTDIR}/sysconfig/
-	install --backup=numbered -m ${CONFMODE} lfs/sysconfig/createfiles                                ${EXTDIR}/sysconfig/
-	install --backup=numbered -m ${CONFMODE} lfs/sysconfig/modules                                    ${EXTDIR}/sysconfig
-	install --backup=numbered -m ${CONFMODE} lfs/sysconfig/rc                                         ${EXTDIR}/sysconfig/
-	install --backup=numbered -m ${CONFMODE} lfs/sysconfig/sysklogd                                   ${EXTDIR}/sysconfig/
-	install                   -m ${MODE} lfs/sysconfig/network-devices/ifup                       ${EXTDIR}/sysconfig/network-devices
-	install                   -m ${MODE} lfs/sysconfig/network-devices/ifdown                     ${EXTDIR}/sysconfig/network-devices
+	install --backup=numbered -m ${CONFMODE} lfs/sysconfig/console     ${EXTDIR}/sysconfig/
+	install --backup=numbered -m ${CONFMODE} lfs/sysconfig/createfiles ${EXTDIR}/sysconfig/
+	install --backup=numbered -m ${CONFMODE} lfs/sysconfig/modules     ${EXTDIR}/sysconfig
+	install --backup=numbered -m ${CONFMODE} lfs/sysconfig/rc          ${EXTDIR}/sysconfig/
+	install                   -m ${MODE} lfs/sysconfig/network-devices/ifup   ${EXTDIR}/sysconfig/network-devices
+	install                   -m ${MODE} lfs/sysconfig/network-devices/ifdown ${EXTDIR}/sysconfig/network-devices
 	install                   -m ${MODE} lfs/sysconfig/network-devices/services/ipv4-static       ${EXTDIR}/sysconfig/network-devices/services
 	install                   -m ${MODE} lfs/sysconfig/network-devices/services/ipv4-static-route ${EXTDIR}/sysconfig/network-devices/services
 
 install-consolelog: create-dirs
 	install -m ${MODE} contrib/init.d/consolelog   ${EXTDIR}/rc.d/init.d
 	ln -sf ../init.d/consolelog  ${EXTDIR}/rc.d/rcsysinit.d/S00consolelog
-	install --backup=numbered -m ${CONFMODE} contrib/sysconfig/consolelog                                 ${EXTDIR}/sysconfig/
+	install --backup=numbered -m ${CONFMODE} contrib/sysconfig/consolelog  ${EXTDIR}/sysconfig/
 
 install-hotplug: create-dirs
 	install -m ${MODE} contrib/init.d/hotplug      ${EXTDIR}/rc.d/init.d
@@ -96,25 +95,9 @@ install-hotplug: create-dirs
 	ln -sf ../init.d/hotplug     ${EXTDIR}/rc.d/rc0.d/S50hotplug
 	ln -sf ../init.d/hotplug     ${EXTDIR}/rc.d/rc6.d/S50hotplug
 
-install-syslog-ng: create-dirs
-	install -d -m ${DIRMODE} ${EXTDIR}/syslog-ng
-	install -m ${MODE} contrib/init.d/syslog-ng	${EXTDIR}/rc.d/init.d
-	rm -f  ${EXTDIR}/sysconfig/sysklogd
-	rm -rf ${EXTDIR}/rc.d/init.d/sysklogd
-	rm -rf ${EXTDIR}/rc.d/rc{0,1,2,6}.d/K90sysklogd
-	rm -rf ${EXTDIR}/rc.d/rc{3,4,5}.d/S10sysklogd
-	ln -sf ../init.d/syslog-ng   ${EXTDIR}/rc.d/rc0.d/K90syslog-ng
-	ln -sf ../init.d/syslog-ng   ${EXTDIR}/rc.d/rc1.d/K90syslog-ng
-	ln -sf ../init.d/syslog-ng   ${EXTDIR}/rc.d/rc2.d/K90syslog-ng
-	ln -sf ../init.d/syslog-ng   ${EXTDIR}/rc.d/rc6.d/K90syslog-ng
-	ln -sf ../init.d/syslog-ng   ${EXTDIR}/rc.d/rc3.d/S10syslog-ng
-	ln -sf ../init.d/syslog-ng   ${EXTDIR}/rc.d/rc4.d/S10syslog-ng
-	ln -sf ../init.d/syslog-ng   ${EXTDIR}/rc.d/rc5.d/S10syslog-ng
-	install --backup=numbered -m ${CONFMODE} contrib/sysconfig/syslog-ng                           ${EXTDIR}/syslog-ng/
-
 install-service-mtu: create-service-dir
 	install -m ${MODE} contrib/sysconfig/network-devices/services/mtu ${EXTDIR}/sysconfig/network-devices/services
 
 .PHONY: all create-dirs create-service-dir \
-	install install-hotplug install-service-mtu
+	install install-service-mtu
 
